# edugonmor

./: .gitignore  README.md  agent.md
edugonmor_cli/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  agent.md  docker-compose.yml  pyproject.toml
edugonmor_cli/.devcontainer/: Dockerfile  devcontainer.json
edugonmor_cli/.github/workflows/: test-cli.yml  test-template.yml
edugonmor_cli/docker/: entrypoint.sh
edugonmor_cli/src/: __init__.py  config.py  main.py  shell.py
edugonmor_cli/src/commands/: __init__.py
edugonmor_cli/src/commands/connectivity/: __init__.py  connect.py  disconnect.py  status.py  system_info.py
edugonmor_cli/src/commands/project/: __init__.py  create.py  update.py
edugonmor_cli/src/commands/system/: __init__.py  config.py  version.py
edugonmor_cli/src/commands/templates/: __init__.py  info.py  list.py
edugonmor_cli/src/docker/: entrypoint.sh
edugonmor_cli/src/services/: __init__.py  session.py
edugonmor_cli/src/services/connectivity/: __init__.py  ssh_client.py  system_check.py  wizard.py
edugonmor_cli/src/services/core/: copier_wrapper.py
edugonmor_cli/src/services/tools/: __init__.py  git.py
edugonmor_cli/src/services/validators/: __init__.py
edugonmor_cli/src/ui/: __init__.py  console.py
edugonmor_cli/src/ui/components/: __init__.py  (+3 more)
edugonmor_cli/template/: copier.yml
edugonmor_cli/template/.devcontainer/: .gitkeep
edugonmor_cli/template/docker/: .gitkeep
edugonmor_cli/template/src/: .gitkeep
edugonmor_cli/tests/: __init__.py
edugonmor_cli/tests/cli/: test_main.py  test_shell.py
(+501 files in other folders)
