[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edugonmor-cli"
version = "0.1.0"
description = "CLI tool for generating standardized project structures"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "edugonmor" }
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "copier>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fabric>=3.2.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
edugonmor = "src.shell:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
